--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "mongoose": "^8.5.3",
     "random-js": "^2.1.0"
   }
