--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_ENV=production node ./src/index.js",
     "dev": "node ./src/index.js",
     "dev1": "bash -c 'source .env && NODE_ENV=development node ./src/index.js'",
-    "prof":"node --prof ./src/index.js"
+    "prof": "node --prof ./src/index.js",
+    "lint":"npx eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -25,5 +26,10 @@
     "jspdf-autotable": "^3.8.4",
     "mongoose": "^8.5.3",
     "random-js": "^2.1.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.16.0",
+    "eslint": "^9.16.0",
+    "globals": "^15.13.0"
   }
 }
