--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "helmet": "^8.0.0",
+        "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "jspdf": "^2.5.2",
         "jspdf-autotable": "^3.8.4",
