--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "jspdf": "^2.5.2",
         "jspdf-autotable": "^3.8.4",
         "mongoose": "^8.5.3",
+        "morgan": "^1.10.0",
         "random-js": "^2.1.0",
         "winston": "^3.17.0"
     },
