--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,6 +18,7 @@ services:
     command: ["npm", "run", "dev"]
   database:
     image: mongo
+    #binding with different port to avoid collision between host port and container port on developement env
     ports:
       - "27018:27017"
     volumes:
