updating health checkup

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,19 +11,31 @@ services:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
     depends_on:
       - database
+    environment:
+      - MONGODB_CONNECTION_URL="mongodb://database:27017"
     restart: unless-stopped
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
+
+    healthcheck:
+      test: ["CMD", "curl", "-f", "--max-time", "3", "http://localhost:${APPLICATION_PORT}/health"]
+      interval: 1m30s
+      timeout: 6s
+      retries: 3
+      start_period: 30s
+
     command: ["npm", "run", "start"]
   database:
     image: mongo
     ports:
-      - "27017:27017"
+      - "30000:27017"
     volumes:
       - mongodb_data:/data/db
     restart: always
 volumes:
   mongodb_data:
+
+##avoided mongodb database password and username because of complexity, but might later can cause the security reasons
