--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,6 +23,6 @@ services:
       - "27018:27017"
     volumes:
       - mongodb_data:/data/db
-    restart: always
+    restart: unless-stopped
 volumes:
   mongodb_data:
