--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
     "name": "abacus-exam-backend",
-    "version": "2.1.4",
+    "version": "2.1.8",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "NODE_ENV=production node ./src/index.js",
         "dev": "nodemon ./src/index.js",
-        "dev1": "bash -c 'source .env && NODE_ENV=development node ./src/index.js'",
-        "prof": "node --prof ./src/index.js",
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix",
         "format:check": "npx prettier . --check",
-        "format:fix": "npx prettier . --write",
-        "db:dump": "node ./scripts/mongo-dump.js dump",
-        "db:restore": "node ./scripts/mongo-dump.js restore"
+        "format:fix": "npx prettier . --write"
     },
     "author": "Ankit Borude",
     "license": "Apache-2.0",
